--- a/production-docker-compose.yml
+++ b/production-docker-compose.yml
@@ -13,9 +13,7 @@ volumes:
     driver: ${VOLUMES_DRIVER}
   phpmyadmin:
     driver: ${VOLUMES_DRIVER}
-  caddy:
-    driver: ${VOLUMES_DRIVER}
-  elasticsearch:
+  nginx:
     driver: ${VOLUMES_DRIVER}
 
 services:
@@ -153,22 +151,26 @@ services:
       networks:
         - backend
 
-### Caddy Server #########################################
-    caddy:
-      build: ./caddy
+### NGINX Server #########################################
+    nginx:
+      build:
+        context: ./nginx
+        args:
+          - PHP_UPSTREAM_CONTAINER=${NGINX_PHP_UPSTREAM_CONTAINER}
+          - PHP_UPSTREAM_PORT=${NGINX_PHP_UPSTREAM_PORT}
       volumes:
         - ${APP_CODE_PATH_HOST}:${APP_CODE_PATH_CONTAINER}
-        - ${CADDY_CUSTOM_CADDYFILE}:/etc/Caddyfile
-        - ${CADDY_HOST_LOG_PATH}:/var/log/caddy
-        - ${DATA_PATH_HOST}:/root/.caddy
+        - ${NGINX_HOST_LOG_PATH}:/var/log/nginx
+        - ${NGINX_SITES_PATH}:/etc/nginx/sites-available
       ports:
-        - "${CADDY_HOST_HTTP_PORT}:80"
-        - "${CADDY_HOST_HTTPS_PORT}:443"
+        - "${NGINX_HOST_HTTP_PORT}:80"
+        - "${NGINX_HOST_HTTPS_PORT}:443"
       depends_on:
         - php-fpm
       networks:
         - frontend
         - backend
+
 
 ### phpMyAdmin ###########################################
     phpmyadmin:
@@ -187,29 +189,6 @@ services:
         - backend
 
 
-### ElasticSearch ########################################
-    elasticsearch:
-      build: ./elasticsearch
-      volumes:
-        - elasticsearch:/usr/share/elasticsearch/data
-      environment:
-        - cluster.name=laradock-cluster
-        - bootstrap.memory_lock=true
-        - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-      ulimits:
-        memlock:
-          soft: -1
-          hard: -1
-      ports:
-        - "${ELASTICSEARCH_HOST_HTTP_PORT}:9200"
-        - "${ELASTICSEARCH_HOST_TRANSPORT_PORT}:9300"
-      depends_on:
-        - php-fpm
-      networks:
-        - frontend
-        - backend
-
-
 ### Certbot #########################################
     certbot:
       build:
@@ -219,7 +198,7 @@ services:
         - ./certbot/letsencrypt/:${APP_CODE_PATH_CONTAINER}/letsencrypt
       environment:
         - CN="fake.domain.com"
-        - EMAIL="fake.email@gmail.com"
+        - EMAIL="contact@qulph.com"
       networks:
         - frontend
 
@@ -239,4 +218,12 @@ services:
         - frontend
         - backend
 
-
+### Portainer ################################################
+    portainer:
+      build:
+        context: ./portainer
+      volumes:
+        - ${DATA_PATH_HOST}/portainer_data:/data
+        - /var/run/docker.sock:/var/run/docker.sock
+      ports:
+        - 9010:9000
