--- a/.env_
+++ b/.env_
@@ -40,6 +40,11 @@ PHP_VERSION=7.2
 PHP_INTERPRETER=php-fpm
 
 
+### Docker Host IP ########################################
+
+# Enter your Docker Host IP (will be appended to /etc/hosts). Default is `10.0.75.1`
+DOCKER_HOST_IP=10.0.75.1
+
 ### Environment ###########################################
 
 # If you need to change the sources (i.e. to China), set CHANGE_SOURCE to true
