--- a/.env_
+++ b/.env_
@@ -75,22 +75,12 @@ WORKSPACE_INSTALL_PHPDBG=false
 WORKSPACE_INSTALL_LDAP=false
 WORKSPACE_INSTALL_SOAP=false
 WORKSPACE_INSTALL_IMAP=false
-WORKSPACE_INSTALL_MONGO=false
 WORKSPACE_INSTALL_AMQP=false
-WORKSPACE_INSTALL_MSSQL=false
-WORKSPACE_INSTALL_DRUSH=false
-WORKSPACE_DRUSH_VERSION=8.1.17
-WORKSPACE_INSTALL_DRUPAL_CONSOLE=false
-WORKSPACE_INSTALL_AEROSPIKE=false
 WORKSPACE_INSTALL_V8JS=false
-WORKSPACE_INSTALL_LARAVEL_ENVOY=false
-WORKSPACE_INSTALL_LARAVEL_INSTALLER=false
 WORKSPACE_INSTALL_DEPLOYER=false
 WORKSPACE_INSTALL_PRESTISSIMO=false
 WORKSPACE_INSTALL_LINUXBREW=false
 WORKSPACE_INSTALL_MC=false
-WORKSPACE_INSTALL_SYMFONY=false
-WORKSPACE_INSTALL_PYTHON=false
 WORKSPACE_INSTALL_IMAGE_OPTIMIZERS=false
 WORKSPACE_INSTALL_IMAGEMAGICK=false
 WORKSPACE_INSTALL_TERRAFORM=false
@@ -100,7 +90,6 @@ WORKSPACE_INSTALL_SWOOLE=false
 WORKSPACE_INSTALL_LIBPNG=false
 WORKSPACE_PUID=1000
 WORKSPACE_PGID=1000
-WORKSPACE_CHROME_DRIVER_VERSION=2.32
 WORKSPACE_TIMEZONE=UTC
 WORKSPACE_SSH_PORT=2222
 
@@ -138,13 +127,11 @@ PHP_FPM_INSTALL_PCNTL=false
 PHP_WORKER_INSTALL_PGSQL=false
 
 
-
-
 ### MARIADB ###############################################
 
-MARIADB_DATABASE=default
-MARIADB_USER=default
-MARIADB_PASSWORD=secret
+MARIADB_DATABASE=qulph
+MARIADB_USER=qulph
+MARIADB_PASSWORD=qulph
 MARIADB_PORT=3306
 MARIADB_ROOT_PASSWORD=root
 MARIADB_ENTRYPOINT_INITDB=./mariadb/docker-entrypoint-initdb.d
