--- a/.env_
+++ b/.env_
@@ -126,6 +126,17 @@ PHP_FPM_INSTALL_PCNTL=false
 
 PHP_WORKER_INSTALL_PGSQL=false
 
+### MYSQL #################################################
+
+MYSQL_VERSION=latest
+MYSQL_DATABASE=qulph
+MYSQL_USER=qulph
+MYSQL_PASSWORD=qulph
+MYSQL_PORT=3306
+MYSQL_ROOT_PASSWORD=root
+MYSQL_ENTRYPOINT_INITDB=./mysql/docker-entrypoint-initdb.d
+
+### REDIS #################################################
 
 ### MARIADB ###############################################
 
