zip install and rebuilding container options

--- a/.env_
+++ b/.env_
@@ -63,6 +63,7 @@ WORKSPACE_INSTALL_NODE=true
 WORKSPACE_NODE_VERSION=node
 WORKSPACE_NPM_REGISTRY=
 WORKSPACE_INSTALL_YARN=false
+WORKSPACE_INSTALL_ZIP_UNZIP=true
 WORKSPACE_YARN_VERSION=latest
 WORKSPACE_INSTALL_NPM_GULP=true
 WORKSPACE_INSTALL_NPM_BOWER=true
