--- a/production-docker-compose.yml
+++ b/production-docker-compose.yml
@@ -30,6 +30,7 @@ services:
           - INSTALL_AMQP=${WORKSPACE_INSTALL_AMQP}
           - NPM_REGISTRY=${WORKSPACE_NPM_REGISTRY}
           - INSTALL_YARN=${WORKSPACE_INSTALL_YARN}
+          - INSTALL_ZIP=${WORKSPACE_INSTALL_ZIP_UNZIP}
           - INSTALL_V8JS=${WORKSPACE_INSTALL_V8JS}
           - COMPOSER_GLOBAL_INSTALL=${WORKSPACE_COMPOSER_GLOBAL_INSTALL}
           - COMPOSER_REPO_PACKAGIST=${WORKSPACE_COMPOSER_REPO_PACKAGIST}
