multisite generation bash scripts

--- a/.env_
+++ b/.env_
@@ -130,9 +130,9 @@ PHP_WORKER_INSTALL_PGSQL=false
 ### MYSQL #################################################
 
 MYSQL_VERSION=latest
-MYSQL_DATABASE=qulph
-MYSQL_USER=qulph
-MYSQL_PASSWORD=qulph
+MYSQL_DATABASE=demo
+MYSQL_USER=demo
+MYSQL_PASSWORD=demo
 MYSQL_PORT=3306
 MYSQL_ROOT_PASSWORD=root
 MYSQL_ENTRYPOINT_INITDB=./mysql/docker-entrypoint-initdb.d
@@ -141,9 +141,9 @@ MYSQL_ENTRYPOINT_INITDB=./mysql/docker-entrypoint-initdb.d
 
 ### MARIADB ###############################################
 
-MARIADB_DATABASE=qulph
-MARIADB_USER=qulph
-MARIADB_PASSWORD=qulph
+MARIADB_DATABASE=demo
+MARIADB_USER=demo
+MARIADB_PASSWORD=demo
 MARIADB_PORT=3306
 MARIADB_ROOT_PASSWORD=root
 MARIADB_ENTRYPOINT_INITDB=./mariadb/docker-entrypoint-initdb.d
