--- a/production-docker-compose.yml
+++ b/production-docker-compose.yml
@@ -137,7 +137,7 @@ services:
         - ${APP_CODE_PATH_HOST}:${APP_CODE_PATH_CONTAINER}
         - ${CADDY_CUSTOM_CADDYFILE}:/etc/Caddyfile
         - ${CADDY_HOST_LOG_PATH}:/var/log/caddy
-        - ${DATA_PATH_HOST}:/root/.caddy
+        - ${DATA_PATH_HOST}:/root/.caddy DO_AUTH_TOKEN={CADDY_DO_AUTH_TOKEN}
       ports:
         - "${CADDY_HOST_HTTP_PORT}:80"
         - "${CADDY_HOST_HTTPS_PORT}:443"
