--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -15,15 +15,10 @@
         to {path} {path}/ /index.php?{query}
     }
 
-    tls {
-        max_certs 50000
-    }
-
-    # To use Lets encrpt tls with a DNS provider uncomment these
-    # lines and change the provider as required
-    tls {
-        dns digitalocean
-    }
+    tls contact@qulph.com {
+ 		ask https://api.qulph.com/test-domain.php
+ 		dns digitalocean
+ 	}
 
     gzip
     browse
@@ -36,31 +31,5 @@
 api.qulph.com:443 {
 
     root /var/www/api/api/web
-
-    fastcgi / php-fpm:9000 php {
-        index index.php
-    }
-
-    # To handle .html extensions change ext to
-    # ext / .html
-
-    rewrite {
-        to {path} {path}/ /index.php?{query}
-    }
-
-    tls {
-        max_certs 50000
-    }
-
-    # To use Lets encrpt tls with a DNS provider uncomment these
-    # lines and change the provider as required
-    tls {
-        dns digitalocean
-    }
-
-    gzip
-    browse
-    log /var/log/caddy/access.log
-    errors /var/log/caddy/error.log
 
 }
